--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Make Readme</title>
     <style>
-      html {
-        height: 100%;
-      }
-      body {
-        min-height: 100%;
-      }
+        html, body {
+          height: 100%;
+        }
     </style>
   </head>
-  <body class="">
-    <div id="root"></div>
+  <body>
+    <div id="root" class=" min-h-dvh"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
